<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Login Screen -->
    <string name="username_or_email_hint">Username or Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button">Log In</string>
    <string name="register_prompt">Don\'t have an account? Register</string>

    <!-- Registration Screen -->
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="register_password_hint">Password</string> <!-- Renamed -->
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="login_link_text">Already have an account? Log in</string>

    <!-- Change Password Screen -->
    <string name="enter_email_hint">Enter your email</string>
    <string name="enter_new_password_hint">Enter new password</string>
    <string name="confirm_new_password_hint">Confirm new password</string>
    <string name="update_password_button">Update Password</string>

    <string name="view_completion_history">View Completion History</string>

    <string name="logout">Logout</string>
    <string name="clear_history">clear_history</string>
    <string name="back">back\n</string>
    <string name="task_completion_history">Task Completion History</string>
    <string name="messaging">Messaging</string>
    <string name="delete">Delete</string>

</resources>
