<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@android:color/white">

    <!-- Email Field -->
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="emailAddress"
        android:background="@android:drawable/editbox_background"
        android:elevation="2dp"
        android:hint="@string/enter_email_hint"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textColorHint="#757575"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- New Password Field -->
    <EditText
        android:id="@+id/newPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="newPassword"
        android:background="@android:drawable/editbox_background"
        android:elevation="2dp"
        android:hint="@string/enter_new_password_hint"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textColorHint="#757575"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Confirm Password Field -->
    <EditText
        android:id="@+id/confirmPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="password"
        android:background="@android:drawable/editbox_background"
        android:elevation="2dp"
        android:hint="@string/confirm_new_password_hint"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textColorHint="#757575"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Update Password Button -->
    <Button
        android:id="@+id/updatePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:elevation="3dp"
        android:padding="16dp"
        android:text="@string/update_password_button"
        android:textColor="#4E342E"
        android:textSize="18sp"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>
